--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
     "android": "expo run:android",
+    "format": "prettier --write .",
     "ios": "expo run:ios",
-    "web": "expo start --web",
-    "prepare": "husky"
+    "lint": "eslint . --color --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "eslint . --color --fix --ext .js,.jsx,.ts,.tsx",
+    "prepare": "husky",
+    "start": "expo start",
+    "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~50.0.14",
@@ -20,9 +23,19 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/types": "^19.0.3",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.11.30",
     "@types/react": "~18.2.45",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
+    "prettier": "^3.2.5",
     "typescript": "^5.1.3"
   },
   "private": true
