--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,20 +1,20 @@
 extends:
-  - "plugin:@typescript-eslint/recommended"
+  - 'plugin:@typescript-eslint/recommended'
   - prettier
-parser: "@typescript-eslint/parser"
+parser: '@typescript-eslint/parser'
 plugins:
-  - "@typescript-eslint"
+  - '@typescript-eslint'
   - prettier
   - react
   - react-hooks
   - unused-imports
 root: true
 rules:
-  "@next/next/no-img-element": 0
+  '@next/next/no-img-element': 0
   prettier/prettier: error
   unused-imports/no-unused-vars:
     - warn
     - vars: all
-      varsIgnorePattern: "^_"
+      varsIgnorePattern: '^_'
       args: after-used
-      argsIgnorePattern: "^_"
+      argsIgnorePattern: '^_'
