--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-amplify/ui-react-native": "^2.1.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
+    "@react-navigation/native": "^6.1.17",
     "aws-amplify": "^6.0.21",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
