--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-amplify/ui-react-native": "^2.1.4",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "aws-amplify": "^6.0.21",
     "expo": "~50.0.14",
@@ -24,7 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-safe-area-context": "4.8.2"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
