--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +38,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/node": "^20.11.30",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
