--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "aws-amplify": "^6.0.21",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "jotai": "^2.7.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
